# docs/swagger.json
@@ -1727,9 +1727,23 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "expire date",
+                        "name": "expire_date",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "stock",
                         "name": "stock",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "enabled",
+                        "name": "enabled",
                         "in": "formData",
                         "required": true
                     },
@@ -1912,9 +1926,23 @@
                         "in": "formData"
                     },
                     {
+                        "type": "string",
+                        "description": "expire date",
+                        "name": "expire_date",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "stock",
                         "name": "stock",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "enabled",
+                        "name": "enabled",
                         "in": "formData",
                         "required": true
                     }
